--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,8 @@
 <h2>index.html</h2>
 
 <a href="/members/new"> 회원 가입 </a> <br>
-<a href="/members/find"> 회원 찾기 </a>
+<a href="/members/find"> 회원 찾기 </a> <br>
+안녕하세요. 연결되었습니다! 인텔리제이에서 수정
 
 </body>
 </html>
